Fixed inventory layout: Collapsible menu items' texts now align to right, control buttons no longer have text beside them, added floating shopping cart button

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -5,3 +5,7 @@ div.container {
 nav {
     width: 100%;
 }
+
+a.menu {
+    text-align: right;
+}
